--- a/Home.html
+++ b/Home.html
@@ -22,6 +22,25 @@
 
 <body>
     <header>
+     <!--NAVBAR-->
+            <nav>
+                    <div class="right">
+                    <a href="https://www.linkedin.com/in/nancy-ben-kacem/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i><span>Nancy Ben Kacem</span></a>
+                    <a href="https://github.com/nbk3004" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                        <span>Github</span></a>
+                    <a href="https://www.salesforce.com/trailblazer/nancybenkacem" target="_blank" <i class="fa-brands fa-salesforce"></i>
+                        <span>Salesforce</span></a>
+                        <a href="https://www.datacamp.com/portfolio/nancyk3004" target="_blank" <i class="ibio-datacamp"></i>>
+                            <span>Datacamp</span></a>
+                         <!-- <a href="https://www.datacamp.com/portfolio/nancyk3004" target="_blank" <i class="ibio-tableau"></i>>
+                                <span>Tableau</span></a>-->
+                    <a href="mailto: nancy.benkacem@outlook.de">
+                        <i class="fa-regular fa-envelope"></i>
+                        <span>email</span></a>
+                </div>
+            </nav>
   </header>
 
     <main>
@@ -51,7 +70,7 @@
                 </div>
             </div>
             <div class="headshot">
-                <img src="nancy_benkacem.webp" alt="me">
+                <img src="pics/nancy_benkacem.webp" alt="me">
 
             </div>
         </section>
@@ -70,32 +89,14 @@
                     Let's connect to explore potential opportunities for collaboration and mutual growth.</p>
             </div>
                       </div>
-                      <footer><!--NAVBAR-->
-                        <nav>
-                                <div class="right">
-                                <a href="https://www.linkedin.com/in/nancy-ben-kacem/" target="_blank">
-                                    <i class="fa-brands fa-linkedin"></i><span>Nancy Ben Kacem</span></a>
-                                <a href="https://github.com/nbk3004" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                    <span>Github</span></a>
-                                <a href="https://www.salesforce.com/trailblazer/nancybenkacem" target="_blank" <i class="fa-brands fa-salesforce"></i>
-                                    <span>Salesforce</span></a>
-                                    <a href="https://www.datacamp.com/portfolio/nancyk3004" target="_blank" <i class="ibio-datacamp"></i>>
-                                        <span>Datacamp</span></a>
-                                     <!-- <a href="https://www.datacamp.com/portfolio/nancyk3004" target="_blank" <i class="ibio-tableau"></i>>
-                                            <span>Tableau</span></a>-->
-                                <a href="mailto: nancy.benkacem@outlook.de">
-                                    <i class="fa-regular fa-envelope"></i>
-                                    <span>email</span></a>
-                            </div>
-                        </nav></footer>
+           
         </section>
         <!--section 3: Testimony-->
         <section id="testimony" class="testimony-section">
             <h2><a href="https://www.linkedin.com/in/nancy-ben-kacem/details/recommendations/" target="blank">Testimonies</a></h2>
             <div class="group">
                 <div class="person-details" alt="Han Han">
-                    <img src="han.webp">
+                    <img src="pics/han.webp">
                     <p>Han Han</p><br>
                     <p>Technical Product Manager<br>wefox Insurance </p>
                 </div>
@@ -140,7 +141,6 @@
     </div>
     </main>
 </body>
-
 </html>
 
 
