styling and links

--- a/Home.html
+++ b/Home.html
@@ -10,8 +10,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,7 +53,7 @@
         <!-- Section 1: Hero -->
         <section class="hero-section">
             <div class="text">
-                <h2>Hi there 👋</h2>
+                <h2>Hi there</h2>
                 <p>It’s Nancy. Helping various industries translate their business needs into codable action!</p>
                 <div class="links">
                     <a href="#skills">
@@ -78,18 +79,28 @@
         <section id="skills" class="skills-section">
             <h2>Skills</h2>
             <div class="text">
-                <p><strong>Top Skills:</strong> Business Analysis • Agile Project Management • Business Process Improvement • Intercultural Communication</p>
+                <p><strong>Top Skills:</strong> Business Analysis • Agile Project Management • Business Process
+                    Improvement • Intercultural Communication</p>
+                <p><strong>Top Certifications:</strong>
+                    Certified Salesforce Administrator (SCA) & Business Analyst II Certified in Cybersecurity (CC) II
+                    Microsoft Certified: Azure AI-900 II Scrum Fundamental Certified (SFC)
+                </p><br>
+                <p><strong>About me:</strong>
                 <p>
-                    I am an experienced professional with a diverse background in operations and project management. 
-                    Transitioning into IT and business analysis, I leverage my skills to optimize processes and bridge 
-                    the gap between business needs and technological solutions.
+                    I am an experienced professional with a diverse background in operations and project management.
+                    Transitioning into IT and business analysis, I leverage my skills to optimize processes and bridge
+                    the gap between business needs and technological solutions.<br><br>
+                    For my full resume, please visit my<a id="LinkedIn"
+                        href="https://www.linkedin.com/in/nancy-ben-kacem/" target="_blank">LinkedIn</a>profile.
                 </p>
+
             </div>
         </section>
 
         <!-- Section 3: Testimony -->
         <section id="testimony" class="testimony-section">
-            <h2><a href="https://www.linkedin.com/in/nancy-ben-kacem/details/recommendations/" target="_blank">Testimonies</a></h2>
+            <h2><a href="https://www.linkedin.com/in/nancy-ben-kacem/details/recommendations/"
+                    target="_blank">Testimonies</a></h2>
             <div class="group">
                 <div class="person-details">
                     <img src="pics/han.webp" alt="Han Han">
@@ -97,8 +108,10 @@
                     <p>Technical Product Manager, Wefox Insurance</p>
                 </div>
                 <div class="text">
-                    "Nancy is a reliable and hardworking operations manager with sharp analytical skills and business acumen. 
-                    She played an instrumental role in our ML-based fraud detection project. I had great pleasure working with 
+                    "Nancy is a reliable and hardworking operations manager with sharp analytical skills and business
+                    acumen.
+                    She played an instrumental role in our ML-based fraud detection project. I had great pleasure
+                    working with
                     her and highly recommend her!"
                 </div>
             </div>
@@ -120,6 +133,19 @@
                 </form>
             </div>
         </section>
+        <footer>
+            <div class="container">
+                <div class="gallery">
+                    <img src="pics/SF BA.png" alt="Salesforce Business Analyst">
+                    <img src="pics/SF Admin.png" alt="Salesforce Administrator">
+                    <img src="pics/Mckinsey.png" alt="McKinsey Forward Program">
+                    <img src="pics/CC.png" alt="ISC2">
+                </div>
+            </div>
+            <p>© 2025 Nancy Ben Kacem. All rights reserved.</p>
+        </footer>
+
     </main>
 </body>
+
 </html>
