--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,8 @@
         <section class="hero-section">
             <div class="text">
                 <h2>Hi there</h2>
-                <p>It’s Nancy. Helping various industries translate their business needs into codable action!</p>
+                <p>It’s Nancy. IT Business Analyst based in Berlin. Helping various industries translate their business
+                    needs into codable action!</p>
                 <div class="links">
                     <a href="#skills">
                         <i class="fa-solid fa-code"></i>
