datacamp icon fix

--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,8 @@
                     <span>Salesforce</span>
                 </a>
                 <a href="https://www.datacamp.com/portfolio/nancyk3004" target="_blank">
-                    <i class="fa-brands fa-datacamp"></i>
+                    <img src="pics\datacamp-svgrepo-com.svg" alt="Datacamp Logo"
+                        style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">
                     <span>Datacamp</span>
                 </a>
                 <a href="mailto:nancy.benkacem@outlook.de">
